fix la scrollbar sur x

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@ html,
 body {
   min-height: 100vh;
   min-width: 100vw;
+  overflow-x: clip;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
